--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/style.css" />
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/site.css" />
 
-    <title>IPFS-DDNS</title>
+    <title>DDNS</title>
   </head>
 
   <body>
